--- a/github/workflows/lint.yml
+++ b/github/workflows/lint.yml
@@ -2,8 +2,7 @@ name: Lint Check
 
 on:
   pull_request:
-    branches:
-      - main # Replace with your target branch
+    types: [opened, synchronize, reopened]
 
 jobs:
   lint:
